@@ -1,6 +1,7 @@
 Revision history for Sys-Sendfile
 
 {{$NEXT}}
+          Convert descriptors to handles correctly on Windows
 
 0.14      2015-02-14 16:29:03+01:00 Europe/Amsterdam
           Explicitly include winsock on Windows again
